--- a/site/Makefile.local.travis
+++ b/site/Makefile.local.travis
@@ -14,6 +14,9 @@ BINDIR=$(HOME)/chime/bin
 
 MSGPACK_INC_DIR ?= /home/travis/build/CHIMEFRB/ch_frb_io/msgpack-2.1.0/include
 
+ZMQ_INC_DIR ?= ~/zmq/include
+ZMQ_LIB_DIR ?= ~/zmq/lib
+
 #
 # C++ command line
 # Don't forget -std=c++11 -pthread -fPIC
@@ -36,6 +39,6 @@ ifeq ($(COVERAGE), yes)
     OPT_FLAGS += -fprofile-arcs -ftest-coverage
 endif
 
-CPP := $(CXX) -std=c++11 -pthread -fPIC -Wall $(OPT_FLAGS) -march=native -ffast-math -I. -I$(INCDIR) -I$(MSGPACK_INC_DIR)
+CPP := $(CXX) -std=c++11 -pthread -fPIC -Wall $(OPT_FLAGS) -march=native -ffast-math -I. -I$(INCDIR) -I$(MSGPACK_INC_DIR) -I$(ZMQ_INC_DIR)
 
-CPP_LFLAGS := -L. -L$(LIBDIR)
+CPP_LFLAGS := -L. -L$(LIBDIR) -L$(ZMQ_LIB_DIR)
