--- a/site/Makefile.local.frb1
+++ b/site/Makefile.local.frb1
@@ -1,13 +1,13 @@
 # Makefile.local for frb1.physics.mcgill.ca
 
 # Directory where C++ libraries will be installed
-LIBDIR=$(HOME)/lib
+LIBDIR ?= $(HOME)/lib
 
 # Directory where C++ header files will be installed
-INCDIR=$(HOME)/include
+INCDIR ?= $(HOME)/include
 
 # Directory where executables will be installed
-BINDIR=$(HOME)/bin
+BINDIR ?= $(HOME)/bin
 
 MSGPACK_INC_DIR ?= /usr/include
 
