--- a/site/Makefile.local.frb1
+++ b/site/Makefile.local.frb1
@@ -1,33 +1,13 @@
 # Makefile.local for frb1.physics.mcgill.ca
 
 # Directory where C++ libraries will be installed
-LIBDIR ?= $(HOME)/lib
+LIBDIR=$(HOME)/lib
 
 # Directory where C++ header files will be installed
-INCDIR ?= $(HOME)/include
+INCDIR=$(HOME)/include
 
 # Directory where executables will be installed
-BINDIR ?= $(HOME)/bin
-
-MSGPACK_INC_DIR ?= /usr/include
-
-ZMQ_INC_DIR ?= /usr/include
-ZMQ_LIB_DIR ?= /usr/lib64
-
-CXX ?= g++
-
-OPTIMIZE ?= yes
-ifeq ($(OPTIMIZE), yes)
-    OPT_FLAGS := -O3 -funroll-loops
-else
-    OPT_FLAGS := -O0 -g
-endif
-
-COVERAGE ?= no
-ifeq ($(COVERAGE), yes)
-    # Travis + Coverall: include coverage tracking code.  Also note that we turned off optimization!
-    OPT_FLAGS += -fprofile-arcs -ftest-coverage
-endif
+BINDIR=$(HOME)/bin
 
 #
 # C++ command line
@@ -36,8 +16,6 @@ endif
 # Don't forget to add . and $(LIBDIR) in your LD_LIBRARY_PATH environment variable (in this order)
 # Don't forget -pthread and -fPIC
 #
+CPP=g++ -std=c++11 -pthread -fPIC -march=native -Wall -O3 -funroll-loops -ffast-math -I. -I$(INCDIR)
 
-CPP := $(CXX) -std=c++11 -pthread -fPIC -Wall $(OPT_FLAGS) -march=native -ffast-math -I. -I$(INCDIR) -I$(MSGPACK_INC_DIR) -I$(ZMQ_INC_DIR)
-
-CPP_LFLAGS := -L. -L$(LIBDIR) -L$(ZMQ_LIB_DIR)
-
+CPP_LFLAGS=-L. -L$(LIBDIR)
