--- a/site/Makefile.local.frb-compute-0
+++ b/site/Makefile.local.frb-compute-0
@@ -18,11 +18,11 @@ MSGPACK_LFLAGS ?= $(shell pkg-config --libs   msgpack)
 ZMQ_CFLAGS ?= $(shell pkg-config --cflags libzmq)
 ZMQ_LFLAGS ?= $(shell pkg-config --libs   libzmq)
 
-JSON_CFLAGS ?= $(shell pkg-cnofig --cflags jsoncpp)
-JSON_LFLAGS ?= $(shell pkg-cnofig --libs   jsoncpp)
+JSON_CFLAGS ?= $(shell pkg-config --cflags jsoncpp)
+JSON_LFLAGS ?= $(shell pkg-config --libs   jsoncpp)
 
-CURL_CFLAGS ?= $(shell pkg-cnofig --cflags libcurl)
-CURL_LFLAGS ?= $(shell pkg-cnofig --libs   libcurl)
+CURL_CFLAGS ?= $(shell pkg-config --cflags libcurl)
+CURL_LFLAGS ?= $(shell pkg-config --libs   libcurl)
 
 #
 # C++ command line
