--- a/site/Makefile.local.orangutan
+++ b/site/Makefile.local.orangutan
@@ -18,6 +18,6 @@ BINDIR ?= $(HOME)/bin
 # Don't forget -pthread and -fPIC
 #
 
-CPP := g++ -std=c++11 -pthread -fPIC -Wall -O3 -march=native -ffast-math -I. -I$(INCDIR) -I/usr/include/jsoncpp
+CPP := g++ -g -std=c++11 -pthread -fPIC -Wall -O3 -march=native -ffast-math -I. -I$(INCDIR) -I/usr/include/jsoncpp
 
 CPP_LFLAGS := -L. -L$(LIBDIR)
