generalize the fill_rfi_mask function names

--- a/site/Makefile.local.dstn_laptop
+++ b/site/Makefile.local.dstn_laptop
@@ -12,6 +12,9 @@ BINDIR=$(HOME)/chime/bin
 HDF5_INC_DIR=/usr/local/include
 HDF5_LIB_DIR=/usr/local/lib
 
+MSGPACK_INC ?= $(pkg-config --cflags msgpack)
+MSGPACK_LIB ?= $(pkg-config --libs msgpack)
+
 #
 # C++ command line
 # Don't forget -std=c++11 -pthread -fPIC
@@ -19,12 +22,12 @@ HDF5_LIB_DIR=/usr/local/lib
 #
 DEBUG ?= no
 ifeq ($(DEBUG),no)
-  CPP=clang++ -std=c++11 -stdlib=libc++ -pthread -fPIC -march=native -Wall -O3 -ffast-math -funroll-loops -I. -I$(INCDIR) -I$(HDF5_INC_DIR)
+  CPP=clang++ -std=c++11 -stdlib=libc++ -pthread -fPIC -march=native -Wall -O3 -ffast-math -funroll-loops -I. -I$(INCDIR) -I$(HDF5_INC_DIR) $(MSGPACK_INC)
 else
-  CPP=clang++ -std=c++11 -stdlib=libc++ -pthread -fPIC -march=native -Wall -O0 -g -ffast-math -funroll-loops -I. -I$(INCDIR) -I$(HDF5_INC_DIR)
+  CPP=clang++ -std=c++11 -stdlib=libc++ -pthread -fPIC -march=native -Wall -O0 -g -ffast-math -funroll-loops -I. -I$(INCDIR) -I$(HDF5_INC_DIR) $(MSGPACK_INC)
 endif
 
 # Any C++ flags which should only be specified when linking 
 # Don't forget to put -L. and -L$(LIBDIR) on the command line (in this order)
 # Don't forget to add . and $(LIBDIR) in your LD_LIBRARY_PATH environment variable (in this order)
-CPP_LFLAGS=-L. -L$(LIBDIR) -L$(HDF5_LIB_DIR)
+CPP_LFLAGS=-L. -L$(LIBDIR) -L$(HDF5_LIB_DIR) $(MSGPACK_LIB)
